src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <description>Campaign End Date</description>
        <label>Campaign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <description>Campaign start date</description>
        <label>Campaign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <description>Description of event being held</description>
        <inlineHelpText>Description of event being held</inlineHelpText>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <description>Location of the event</description>
        <inlineHelpText>Location of the event</inlineHelpText>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <description>External event specific site</description>
        <inlineHelpText>External event specific site</inlineHelpText>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventtiaID__c</fullName>
        <externalId>true</externalId>
        <label>Eventtia ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventtiaURI__c</fullName>
        <externalId>true</externalId>
        <label>Eventtia URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outgoing_Communication_Email__c</fullName>
        <description>Email address used to contact campaign participants</description>
        <label>Outgoing Communication Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Bounce_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average bounce rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Average click rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Click_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average click rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Average open rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Open_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average open rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</description>
        <formula>if (iContactforSF__Message_Statistic_Count__c  &gt; 0, iContactforSF__Total_Unsubscribe_Rate__c / iContactforSF__Message_Statistic_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average unsubscribe rate for messages in &quot;Released&quot; status for this campaign.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>The date/time of the last Update on the Campaign record.</description>
        <inlineHelpText>The date/time of the last Update on the Campaign record.</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Message_Statistic_Count__c</fullName>
        <description>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</description>
        <inlineHelpText>Total number of messages in &quot;Released&quot; status, which are used for the rate averages for the campaign.</inlineHelpText>
        <label>Message Statistic Count</label>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Targeted Join Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <defaultValue>today() + 1</defaultValue>
        <label>Targeted Join Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Bounce_Rate__c</fullName>
        <description>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</description>
        <inlineHelpText>Total bounce rate for messages in &quot;Released&quot; status for this campaign (used to calculate average bounce rate).</inlineHelpText>
        <label>Total Bounce Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Bounce_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Click_Rate__c</fullName>
        <description>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</description>
        <inlineHelpText>Total click rate for messages in &quot;Released&quot; status for this campaign (used to calculate average click rate).</inlineHelpText>
        <label>Total Click Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Click_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Open_Rate__c</fullName>
        <description>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</description>
        <inlineHelpText>Total open rate for messages in &quot;Released&quot; status for this campaign (used to calculate average open rate).</inlineHelpText>
        <label>Total Open Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Open_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Total_Unsubscribe_Rate__c</fullName>
        <description>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</description>
        <inlineHelpText>Total unsubscribe rate for messages in &quot;Released&quot; status for this campaign (used to calculate average unsubscribe rate).</inlineHelpText>
        <label>Total Unsubscribe Rate</label>
        <summarizedField>iContactforSF__iContact_Sent_Message__c.iContactforSF__Unsubscribe_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>iContactforSF__iContact_Sent_Message__c.iContactforSF__Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </summaryFilterItems>
        <summaryForeignKey>iContactforSF__iContact_Sent_Message__c.iContactforSF__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Toolkit_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Toolkit</value>
        </filters>
        <label>Toolkit Campaigns</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Standard_Salesforce_Campaign</fullName>
        <active>true</active>
        <description>Creating Campaign standard record type to differentiate iContact campaigns</description>
        <label>Standard Salesforce Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>iContact_Email_Campaign</fullName>
        <active>true</active>
        <description>Record Type for iContact specific Campaigns</description>
        <label>iContact Email Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>